# corp-collab

./: LICENSE  README.md  dashboard.py  pyproject.toml
corp_collab/: checkin.py  checkpoint.py  cli.py  complexity.py  config.py  delegation.py  employee.py  file_share.py  handoff.py  hermes_bridge.py  im.py  mailbox.py  manager.py  mcp_tools.py  nicknames.py  performance.py  promotion.py  resource_lock.py  retention.py  roster.py  skill_grants.py  spawner.py
docs/: PRD.md
tests/: test_checkin.py  test_checkpoint.py  test_cli.py  test_complexity.py  test_config.py  test_delegation.py  test_employee.py  test_file_share.py  test_handoff.py  test_hermes_bridge.py  test_job_title.py  test_mailbox.py  test_manager.py  test_mcp_tools.py  test_nicknames.py  test_performance.py  test_promotion.py  test_resource_lock.py  test_retention.py  test_roster.py  test_skill_grants.py  test_spawner.py  test_tools_comms.py  test_tools_hire_fire.py  test_tools_management.py  test_tools_resources.py
tools/: __init__.py  acquire_resource.py  check_reports.py  email_send.py  escalate.py  fire.py  hire.py  im_send.py  release_resource.py  request_permission.py  request_tools.py  share_file.py  status_report.py
