[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "corp-collab"
version = "0.1.0"
description = "Async AI agent orchestration with a corporate employment metaphor"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "bradcarnage" },
]
keywords = ["ai", "agents", "orchestration", "async", "multi-agent"]

dependencies = [
    "pyyaml>=6.0",
    "aiosqlite>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
